# kb-cli

./: .gitignore  AGENTS.md  Cargo.toml  README.md
src/: config.rs  error.rs  lib.rs  main.rs
src/commands/: add.rs  delete.rs  list.rs  mod.rs  search.rs
src/db/: mod.rs  queries.rs  schema.sql
src/embed/: mod.rs  model.rs
src/indexer/: file.rs  mod.rs  text.rs  url.rs
tests/: integration_test.rs
